# algo_hw_cpp

./: .gitignore
.github/workflows/: ci.yml
alisa_help/: CMakeLists.txt  improvements.md
alisa_help/include/: dungeon.hpp  parse.hpp
alisa_help/src/: dungeon.cpp  main.cpp  parse.cpp
alisa_help/tests/: CMakeLists.txt  test_runner.cpp
alisa_help/tests/data/: 2.in  2.out  3.in  3.out
factory/: CMakeLists.txt  main.cpp
factory/tests/: run_test.cmake
factory/tests/data/: 1.in  1.out  2.in  2.out  3.in  3.out
